<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo_pizza_chef"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/best_pizza_in_jogja"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:text="@string/premium_pizza"/>

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/red"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/button_next"
        android:textSize="18sp" />
</LinearLayout>