<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Login">


    <ImageView
        android:id="@+id/imageViewPizza"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo_pizza"
        android:contentDescription="Logo Pizza" />

    <TextView
        android:id="@+id/textViewlogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/username_hint"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:drawableLeft="@drawable/person_menu_login"
        android:background="@drawable/kotak_putih"
        android:padding="10dp"
        android:inputType="text" />
    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/password_hint"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:drawableLeft="@drawable/password_login"
        android:background="@drawable/kotak_putih"
        android:padding="11dp"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="80dp"
        android:fontFamily="sans-serif-condensed"
        android:backgroundTint="@color/red"
        android:text="@string/second_log_in"/>
</LinearLayout>