<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="true"
    tools:context=".Home_Activity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.pizzaapp.MenuFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_menu">
    </androidx.fragment.app.FragmentContainerView>
                <!-- Layout  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!--Account-->
        <TextView
            android:id="@+id/txtMenuAccount"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            app:drawableTopCompat="@drawable/account_white"
            android:padding="10dp"
            android:text="@string/text_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <!--Pizza-->
        <TextView
            android:id="@+id/textMenuPizza"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            app:drawableTopCompat="@drawable/menu_book_white"
            android:padding="10dp"
            android:text="@string/text_menu"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtMenuShopping"
            app:layout_constraintEnd_toEndOf="@+id/txtMenuAccount"
            />
        <!--Shopping-->
        <TextView
            android:id="@+id/txtMenuShopping"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/text_transaction"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/shopping_white_transaction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textMenuPizza"
            app:layout_constraintStart_toStartOf="@id/txtMenuReport"
            app:layout_constraintTop_toTopOf="parent" />
        <!--Report-->
        <TextView
            android:id="@+id/txtMenuReport"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/text_report"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/bar_chart_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>